added mock api for reference

--- a/api/shop-client/package.json
+++ b/api/shop-client/package.json
@@ -6,14 +6,15 @@
     "pnpm": ">=7"
   },
   "scripts": {
-    "dev": "next dev -p 8000",
+    "dev": "next dev -p 3000",
     "build": "next build",
-    "start": "next start -p 8000",
+    "start": "next start -p 3000",
     "lint": "next lint",
     "lint-staged": "lint-staged",
     "prettier": "prettier --write --ignore-unknown .",
     "prettier:check": "prettier --check --ignore-unknown .",
     "test": "pnpm lint && pnpm prettier:check",
+    "generate-types": "npx openapi-typescript https://localhost:8000/openapi.json -o ./types/api-types.ts",
     "generate-admin": "graphql-codegen --config codegen-admin.ts",
     "generate-shop": "graphql-codegen --config codegen-shop.ts"
   },
@@ -40,6 +41,7 @@
     "js-cookie": "^3.0.5",
     "negotiator": "^0.6.3",
     "next": "14.0.0",
+    "openapi-typescript": "^7.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.48.2",
@@ -48,21 +50,21 @@
     "react-slider": "^2.0.6",
     "sib-api-v3-typescript": "^2.2.2",
     "swiper": "^11.0.4",
+    "swr": "^2.2.5",
     "tabbable": "^6.2.0",
     "tailwind-merge": "^2.0.0",
     "yet-another-react-lightbox": "^3.15.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "tailwind-merge": "^2.0.0",
-    "@tailwindcss/aspect-ratio": "^0.4.2",
-    "@tailwindcss/forms": "^0.5.7",
-    "@tailwindcss/line-clamp": "^0.4.4",
     "@graphql-codegen/cli": "^5.0.0",
     "@graphql-codegen/introspection": "^4.0.0",
     "@graphql-codegen/typescript": "^4.0.1",
     "@graphql-codegen/typescript-operations": "^4.0.1",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/container-queries": "^0.1.1",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/typography": "^0.5.10",
     "@types/body-scroll-lock": "^3.1.2",
     "@types/braintree-web-drop-in": "^1.39.3",
@@ -82,6 +84,7 @@
     "postcss": "^8.4.31",
     "prettier": "3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.6",
+    "tailwind-merge": "^2.0.0",
     "tailwindcss": "^3.3.5",
     "typescript": "5.2.2"
   }
