--- a/mock-api/composer.json
+++ b/mock-api/composer.json
@@ -6,16 +6,15 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
-         "doctrine/dbal": "~2.3",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
-        "infyomlabs/adminlte-templates": "^3.0",
-        "infyomlabs/laravel-generator": "^3.2",
-        "infyomlabs/swagger-generator": "^3.2",
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
-        "laravelcollective/html": "^6.4"
+		"infyomlabs/laravel-generator": "^3.0",
+		"laravelcollective/html": "^6.2",
+		"infyomlabs/adminlte-templates": "^3.0",
+		 "doctrine/dbal": "~2.3"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
