--- a/api/shop-client/package.json
+++ b/api/shop-client/package.json
@@ -14,7 +14,7 @@
     "prettier": "prettier --write --ignore-unknown .",
     "prettier:check": "prettier --check --ignore-unknown .",
     "test": "pnpm lint && pnpm prettier:check",
-    "generate-types": "npx openapi-typescript https://localhost:8000/openapi.json -o ./types/api-types.ts",
+    "generate-types": "openapi-typescript http://127.0.0.1:8000/docs/api-docs.json -o ./types/api-types.ts",
     "generate-admin": "graphql-codegen --config codegen-admin.ts",
     "generate-shop": "graphql-codegen --config codegen-shop.ts"
   },
@@ -41,6 +41,7 @@
     "js-cookie": "^3.0.5",
     "negotiator": "^0.6.3",
     "next": "14.0.0",
+    "openapi-fetch": "^0.13.0",
     "openapi-typescript": "^7.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
