--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,8 +48,22 @@ services:
     networks:
       - app-network
 
+  minio:
+    image: minio/minio:latest
+    container_name: minio
+    ports:
+      - "9000:9000" # MinIO Console/API
+      - "9001:9001" # MinIO Admin Console
+    environment:
+      MINIO_ROOT_USER: "admin"       # Set your MinIO access key
+      MINIO_ROOT_PASSWORD: "admin"   # Set your MinIO secret key
+    volumes:
+      - minio-data:/data                      # Persistent storage for MinIO data
+    command: server /data --console-address ":9001" # Enable Admin Console on port 9001
+
 volumes:
   db_data:
+  minio-data:
 
 networks:
   app-network:
