--- a/docker-compose-copy.yml
+++ b/docker-compose-copy.yml
@@ -5,6 +5,9 @@ services:
       context: ./new/shop-client
       dockerfile: Dockerfile
     environment:
+      MINIO_URL: https://minio.mscacs.info
+      SECURE_COOKIE: true
+      HTTPONLY_COOKIE: true
       VIRTUAL_HOST: new_shop.mscacs.info
       LETSENCRYPT_HOST: old_shop.mscacs.info
       LETSENCRYPT_EMAIL: mike.korakakis@gmail.com
@@ -25,14 +28,9 @@ services:
 
   webserver:
     image: nginx:alpine
-    container_name: webserver
     volumes:
       - .:/var/www/html
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
-    environment:
-      VIRTUAL_HOST: new_api.mscacs.info
-      LETSENCRYPT_HOST: new_api.mscacs.info
-      LETSENCRYPT_EMAIL: mike.korakakis@gmail.com
     ports:
       - "8000:80"
     depends_on:
@@ -47,10 +45,8 @@ services:
     volumes:
       - ./old:/var/www/html 
     environment:
-      MINIO_URL: https://minio.mscacs.info
-      VIRTUAL_HOST: old_shop.mscacs.info
-      LETSENCRYPT_HOST: old_shop.mscacs.info
-      LETSENCRYPT_EMAIL: mike.korakakis@gmail.com
+      - MYSQL_ROOT_PASSWORD=rootpassword
+      - MINIO_URL=https://minio.mscacs.info
     command: /bin/bash -c "apt-get update && apt-get install -y libpq-dev libzip-dev unzip && docker-php-ext-install pdo pdo_mysql && apache2-foreground"
     depends_on:
       - db 
@@ -66,6 +62,7 @@ services:
     command: --default-authentication-plugin=mysql_native_password --bind-address=0.0.0.0
     volumes:
       - db_data:/var/lib/mysql
+
     ports:
       - "3306:3306"
     healthcheck:
@@ -80,9 +77,6 @@ services:
     environment:
       PMA_HOST: db
       MYSQL_ROOT_PASSWORD: rootpassword
-      VIRTUAL_HOST: phpmyadmin.mscacs.info
-      LETSENCRYPT_HOST: phpmyadmin.mscacs.info
-      LETSENCRYPT_EMAIL: mike.korakakis@gmail.com
     ports:
       - "8081:80"
     depends_on:
@@ -98,9 +92,6 @@ services:
     environment:
       MINIO_ROOT_USER: "admin"       # Set your MinIO access key
       MINIO_ROOT_PASSWORD: "admin123"   # Set your MinIO secret key
-      VIRTUAL_HOST: minio.mscacs.info
-      LETSENCRYPT_HOST: minio.mscacs.info
-      LETSENCRYPT_EMAIL: mike.korakakis@gmail.com
     volumes:
       - minio-data:/data                      # Persistent storage for MinIO data
     command: server /data --console-address ":9001" # Enable Admin Console on port 9001
