deployed on a VPS

--- a/new/shop-client/.env.production
+++ b/new/shop-client/.env.production
@@ -1,3 +1,3 @@
-NEXT_PUBLIC_API_URL="https://new_api.mscacs.info"
-NEXT_PUBLIC_FRONTEND_URL="https://new_shop.mscacs.info/"
-NEXT_PUBLIC_MINIO_URL="http://minio.mscacs.info"
+NEXT_PUBLIC_API_URL="https://new-api.mscacs.info"
+NEXT_PUBLIC_FRONTEND_URL="https://new-shop.mscacs.info/"
+NEXT_PUBLIC_MINIO_URL="https://minio.mscacs.info"
