--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
       context: ./new/shop-client
       dockerfile: Dockerfile
     environment:
-      VIRTUAL_HOST: new_shop.mscacs.info
-      LETSENCRYPT_HOST: old_shop.mscacs.info
+      VIRTUAL_HOST: new-shop.mscacs.info
+      LETSENCRYPT_HOST: new-shop.mscacs.info
       LETSENCRYPT_EMAIL: mike.korakakis@gmail.com
     ports:
       - 3000:3000
@@ -30,8 +30,8 @@ services:
       - .:/var/www/html
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
     environment:
-      VIRTUAL_HOST: new_api.mscacs.info
-      LETSENCRYPT_HOST: new_api.mscacs.info
+      VIRTUAL_HOST: new-api.mscacs.info
+      LETSENCRYPT_HOST: new-api.mscacs.info
       LETSENCRYPT_EMAIL: mike.korakakis@gmail.com
     ports:
       - "8000:80"
@@ -47,9 +47,9 @@ services:
     volumes:
       - ./old:/var/www/html 
     environment:
-      MINIO_URL: https://minio.mscacs.info
-      VIRTUAL_HOST: old_shop.mscacs.info
-      LETSENCRYPT_HOST: old_shop.mscacs.info
+      MINIO_URL: https://minio.mscacs.info/shop/
+      VIRTUAL_HOST: old-shop.mscacs.info
+      LETSENCRYPT_HOST: old-shop.mscacs.info
       LETSENCRYPT_EMAIL: mike.korakakis@gmail.com
     command: /bin/bash -c "apt-get update && apt-get install -y libpq-dev libzip-dev unzip && docker-php-ext-install pdo pdo_mysql && apache2-foreground"
     depends_on:
@@ -80,8 +80,8 @@ services:
     environment:
       PMA_HOST: db
       MYSQL_ROOT_PASSWORD: rootpassword
-      VIRTUAL_HOST: phpmyadmin.mscacs.info
-      LETSENCRYPT_HOST: phpmyadmin.mscacs.info
+      VIRTUAL_HOST: phpadmin.mscacs.info
+      LETSENCRYPT_HOST: phpadmin.mscacs.info
       LETSENCRYPT_EMAIL: mike.korakakis@gmail.com
     ports:
       - "8081:80"
@@ -94,7 +94,7 @@ services:
     container_name: minio
     ports:
       - "9000:9000" # MinIO Console/API
-      - "9001:9001" # MinIO Admin Console
+      # - "9001:9001" # MinIO Admin Console
     environment:
       MINIO_ROOT_USER: "admin"       # Set your MinIO access key
       MINIO_ROOT_PASSWORD: "admin123"   # Set your MinIO secret key
