--- a/new/shop-api/Dockerfile
+++ b/new/shop-api/Dockerfile
@@ -30,9 +30,12 @@ WORKDIR /var/www/html
 # Copy the built application from the builder stage
 COPY --from=builder /app /var/www/html
 
-# Set permissions for storage and cache
-RUN chown -R www-data:www-data /var/www/html/storage /var/www/html/bootstrap/cache
+RUN cp /var/www/html/.env.production /var/www/html/.env
 
+# Set permissions for storage and cache
+RUN chown -R www-data:www-data /var/www/html/storage /var/www/html/bootstrap/cache && \
+    chmod -R 775 /var/www/html/storage /var/www/html/bootstrap/cache
+	
 # Expose port 9000 for PHP-FPM
 EXPOSE 9000
 
