--- a/new/shop-client/Dockerfile
+++ b/new/shop-client/Dockerfile
@@ -30,6 +30,7 @@ ENV NODE_ENV=production
 WORKDIR /app
 
 # Copy the built application from the builder stage
+COPY --from=builder /app/next.config.js ./next.config.js
 COPY --from=builder /app/.next ./.next
 COPY --from=builder /app/public ./public
 COPY --from=builder /app/package*.json ./
