--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,7 +47,8 @@ services:
     volumes:
       - ./old:/var/www/html 
     environment:
-      MINIO_URL: https://minio.mscacs.info/shop/
+      MINIO_URL: https://minio.mscacs.info
+      NEW_SHOP_URL: https://new-shop.mscacs.info
       VIRTUAL_HOST: old-shop.mscacs.info
       LETSENCRYPT_HOST: old-shop.mscacs.info
       LETSENCRYPT_EMAIL: mike.korakakis@gmail.com
