added changed apache docker config

--- a/new/shop-client/.env.production
+++ b/new/shop-client/.env.production
@@ -1,3 +1,4 @@
 NEXT_PUBLIC_API_URL="https://new-api.mscacs.info"
 NEXT_PUBLIC_FRONTEND_URL="https://new-shop.mscacs.info/"
 NEXT_PUBLIC_MINIO_URL="https://minio.mscacs.info"
+NEXT_PUBLIC_OLD_URL="https://old-shop.mscacs.info"
