--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,7 +52,7 @@ services:
       VIRTUAL_HOST: old-shop.mscacs.info
       LETSENCRYPT_HOST: old-shop.mscacs.info
       LETSENCRYPT_EMAIL: mike.korakakis@gmail.com
-    command: /bin/bash -c "apt-get update && apt-get install -y libpq-dev libzip-dev unzip && docker-php-ext-install pdo pdo_mysql && apache2-foreground"
+    command: /bin/bash -c "apt-get update && apt-get install -y libpq-dev libzip-dev unzip && docker-php-ext-install pdo pdo_mysql && curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer && composer install --working-dir=/var/www/html && apache2-foreground"
     depends_on:
       - db 
 
