removed unnecessary libraries

--- a/new/shop-client/package.json
+++ b/new/shop-client/package.json
@@ -13,10 +13,7 @@
     "lint-staged": "lint-staged",
     "prettier": "prettier --write --ignore-unknown .",
     "prettier:check": "prettier --check --ignore-unknown .",
-    "test": "pnpm lint && pnpm prettier:check",
-    "generate-types": "openapi-typescript http://127.0.0.1:8000/docs/api-docs.json -o ./types/api-types.ts",
-    "generate-admin": "graphql-codegen --config codegen-admin.ts",
-    "generate-shop": "graphql-codegen --config codegen-shop.ts"
+    "test": "pnpm lint && pnpm prettier:check"
   },
   "git": {
     "pre-commit": "lint-staged"
@@ -26,30 +23,22 @@
   },
   "dependencies": {
     "@formatjs/intl-localematcher": "^0.5.1",
-    "@graphql-codegen/typescript-generic-sdk": "^4.0.0",
     "@headlessui/react": "^2.1.0",
     "@heroicons/react": "^2.2.0",
-    "@stripe/react-stripe-js": "^2.4.0",
-    "@stripe/stripe-js": "^2.2.0",
     "body-scroll-lock": "4.0.0-beta.0",
-    "braintree-web-drop-in": "^1.40.2",
     "clsx": "^2.0.0",
     "email-validator": "^2.0.4",
     "geist": "^1.0.0",
-    "graphql": "^16.8.1",
-    "graphql-tag": "^2.12.6",
     "js-cookie": "^3.0.5",
     "ky": "^1.7.4",
     "negotiator": "^0.6.3",
     "next": "14.2.2",
-    "openapi-fetch": "^0.13.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
     "react-merge-refs": "^2.1.1",
     "react-slider": "^2.0.6",
-    "sib-api-v3-typescript": "^2.2.2",
     "swiper": "^11.0.4",
     "swr": "^2.2.5",
     "tabbable": "^6.2.0",
@@ -58,17 +47,12 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "^5.0.0",
-    "@graphql-codegen/introspection": "^4.0.0",
-    "@graphql-codegen/typescript": "^4.0.1",
-    "@graphql-codegen/typescript-operations": "^4.0.1",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/container-queries": "^0.1.1",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/typography": "^0.5.10",
     "@types/body-scroll-lock": "^3.1.2",
-    "@types/braintree-web-drop-in": "^1.39.3",
     "@types/js-cookie": "^3.0.6",
     "@types/negotiator": "^0.6.3",
     "@types/node": "20.8.9",
@@ -82,7 +66,6 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-unicorn": "^48.0.1",
     "lint-staged": "^15.0.2",
-    "openapi-typescript": "^7.4.3",
     "postcss": "^8.4.31",
     "prettier": "3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.6",
